# WorldView

./: .dockerignore  .git_commit_msg.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  RULES.md  WAVE_0016_FINAL_SUMMARY.md  WAVE_0016_QUICK_REFERENCE.md  docker-compose.yml  fr11_name_dedup_review.csv  gitops_sync.txt  mypy.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml  to_investigate.txt
libs/common/: IMPLEMENTATION.md  README.md  pyproject.toml
libs/common/tests/: conftest.py  test_ids.py  test_retry.py  test_tickers.py  test_time.py  test_types.py
libs/contracts/: IMPLEMENTATION.md  README.md  pyproject.toml
libs/contracts/tests/: conftest.py  test_article.py  test_avro_alignment.py  test_avro_tenant_schemas.py  test_entity.py  test_enums.py  test_events_alert_created.py  test_events_intelligence_contradiction.py  test_events_kg_entity_canonical_created.py  test_events_kg_entity_dirtied.py  test_events_kg_graph_state_changed.py  test_events_kg_provisional_queued.py  test_events_kg_relation_type_proposed.py  test_events_nlp_article_enriched.py  test_events_nlp_signal_detected.py  test_fundamentals.py  test_ingestion_events.py  test_ohlcv.py  test_pagination.py  test_parsing.py  test_quotes.py  test_sentiment.py
libs/messaging/: IMPLEMENTATION.md  README.md  pyproject.toml
libs/messaging/tests/: conftest.py  test_consumer_integration.py  test_dispatcher_batch_pipeline.py  test_dispatcher_integration.py  test_dispatcher_listen_notify.py  test_dispatcher_partition_key.py  test_dispatcher_producer_recovery.py  test_enums.py  test_errors.py  test_kafka_instrumentation.py  test_producer.py  test_schemas.py  test_serializer.py  test_topics.py  test_valkey.py  test_valkey_integration.py
libs/ml-clients/: .claude-context.md  README.md  pyproject.toml
libs/ml-clients/tests/: conftest.py  test_adapter_cost_capture.py  test_adapters.py  test_billing_classification.py  test_chained_description.py  test_cost.py  test_deepinfra_description_prompt_safety.py  test_deepseek_extraction_fallback.py  test_deepseek_extraction_pool.py  test_deepseek_extraction_retry.py  test_embeddinggemma_router.py  test_fallback.py  test_priceability_guardrail.py  test_pricing.py  test_protocols.py  test_text_budget.py  test_usage_log.py
libs/observability/: IMPLEMENTATION.md  README.md  pyproject.toml
libs/observability/tests/: conftest.py  test_error_capture.py  test_internal_jwt.py  test_kafka_consumer_metric.py  test_liveness.py  test_logging.py  test_metrics.py  test_metrics_server.py  test_ml_metrics.py  test_sentry.py  test_silent_zero_cost.py  test_startup_assert.py  test_tracing.py
libs/prompts/: CHANGELOG.md  README.md  pyproject.toml
libs/prompts/tests/: test_alias_prompts.py  test_all_templates_import.py  test_article_relevance_prompt.py  test_briefing_citations.py  test_chat_prompts.py  test_classification_prompts.py  test_description_prompts.py  test_entity_enrichment_prompt.py  test_entity_mention_classification_prompt.py  test_evaluation_prompts.py  test_extraction_prompts.py  test_knowledge_prompts.py  test_market_polarity_prompt.py  test_narrative_prose_prompt.py  test_prompts.py  test_safety_classifier_prompt.py  test_synthesis_prompt.py  test_tool_use_prompt.py
libs/storage/: IMPLEMENTATION.md  README.md  pyproject.toml
libs/storage/tests/: conftest.py  test_exceptions.py  test_health.py  test_interface.py  test_keys.py  test_s3_adapter.py  test_settings.py
libs/tools/: README.md  pyproject.toml
libs/tools/tests/: test_tool_registry.py
services/alert/: .claude-context.md  Dockerfile  Makefile  alembic.ini  main.py  mypy.ini  pyproject.toml
services/alert/alembic/: env.py
services/alert/configs/: dev.local.env.example  docker.env.example  prod.env.example
services/alert/scripts/: backfill_alert_titles.py
services/api-gateway/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/api-gateway/alembic/: env.py
services/api-gateway/configs/: dev.local.env.example  docker.env.example  prod.env.example
services/api-gateway/tests/: conftest.py  test_admin_costs.py  test_alert_ack_snooze_proxy.py  test_alert_rules_proxy.py  test_article_metadata_route.py  test_batch_ohlcv.py  test_bq_quote_routes.py  test_brief_proxy_routes.py  test_bundle_prewarmer.py  test_company_overview_use_case.py  test_company_overviews_batch.py  test_dashboard_bundle.py  test_dashboard_snapshot_use_case.py  test_document_proxy.py  test_earnings_calendar_proxy.py  test_entity_detail_proxy.py  test_feedback_proxy.py  test_financials_bundle.py  test_http_utils.py  test_instrument_page_bundle_use_case.py  test_intelligence_bundle.py  test_intelligence_bundle_stream.py  test_middleware.py  test_observability.py  test_plan0091_enrichment_routes.py  test_portfolio_bundle_use_case.py  test_prediction_market_proxy.py  test_rag_chat_routes.py  test_resolve_security_id.py  test_risk_metrics_wave_g.py  test_routes.py  test_s9_wave1_proxy.py  test_s9_wave2_proxy.py  test_s9_wave3_proxy.py  test_s9_wave5_analytics.py  test_search_proxy.py  (+4 more)
services/content-ingestion/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
services/content-store/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
services/knowledge-graph/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
services/market-data/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/market-ingestion/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
services/nlp-pipeline/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/portfolio/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
services/rag-chat/: .claude-context.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
(+6407 files in other folders)
