[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common"
version = "2025.6.0"
description = "Shared utilities — time helpers, ID generation, type aliases"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-ulid>=3.0,<4",
    "structlog>=25.0,<26",
    "uuid6>=2024.1,<2025",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
