[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contracts"
version = "2025.6.0"
description = "Canonical data models and schema versions"
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog==25.5.0",
]

[project.optional-dependencies]
parquet = [
    "pyarrow==14.0",
]
dev = [
    "pytest==8.0",
    "ruff==0.4",
    "mypy==1.10",
    "structlog==25.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contracts"]
