[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messaging"
version = "2025.6.0"
description = "Kafka producer/consumer, Avro serialization, outbox dispatcher, Valkey client"
requires-python = ">=3.11,<3.13"
dependencies = [
    "confluent-kafka>=2.4.0",
    "fastavro>=1.9.4",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/messaging"]
