[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messaging"
version = "2025.6.0"
description = "Kafka producer/consumer, Avro serialization, outbox dispatcher, Valkey client"
requires-python = ">=3.11,<3.13"
dependencies = [
    "confluent-kafka[schemaregistry]>=2.4,<3",
    "fastavro>=1.9,<2",
    "redis>=5.0,<6",
    "requests>=2.31,<3",
    "structlog>=25.0,<26",
    "observability",
]

[project.optional-dependencies]
pg = [
    "sqlalchemy>=2.0,<3",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "observability",
    "fakeredis[aioredis]>=2.23,<3",
    "sqlalchemy>=2.0,<3",
    # asyncpg is NOT a runtime dependency of messaging (the consumer guards its
    # import with try/except so alternate drivers keep working), but the unit
    # test ``tests/unit/test_base_consumer_db_retry.py`` imports concrete asyncpg
    # exception classes to assert the connection-retry path. Declaring it in
    # [dev] keeps CI's fresh ``pip install -e libs/messaging[dev]`` able to
    # collect the test suite (otherwise collection fails with exit 2).
    "asyncpg>=0.29,<1",
    # aiosqlite backs the in-memory "sqlite+aiosqlite:///:memory:" engine used by
    # tests/unit/kafka/maintenance/test_table_retention.py to exercise the outbox
    # retention/vacuum logic against a real (if lightweight) async SQLAlchemy
    # engine without needing a live Postgres. Missing here since 2026-07-18 broke
    # CI on every push (ModuleNotFoundError: No module named 'aiosqlite').
    "aiosqlite>=0.20,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/messaging"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra",
]
