[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-clients"
version = "0.1.0"
description = "ML model client protocols and adapters for embedding, NER, and extraction"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "messaging",
]

[project.optional-dependencies]
gliner = ["gliner>=0.2"]
anthropic = ["anthropic>=0.30"]
gemini = ["google-genai>=0.7"]
openai = ["openai>=1.40"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ml_clients"]

# Optional-dep and workspace-dep imports lack stubs — suppress globally per module
[[tool.mypy.overrides]]
module = [
    "messaging.*",
    "gliner.*",
    "anthropic.*",
    "openai.*",
    "google.*",
    "google.genai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra",
]
