[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-clients"
version = "0.2.0"
description = "ML model client protocols and adapters for embedding, NER, and extraction"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic-settings>=2.0,<3",
    "structlog>=25.0,<26",
    "httpx>=0.27,<1",
    "messaging",
]

[project.optional-dependencies]
gliner = ["gliner>=0.2,<1"]
anthropic = ["anthropic>=0.30,<1"]
gemini = ["google-genai>=0.7,<1"]
openai = ["openai>=1.40,<2"]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    # openai is a runtime dependency of the DeepSeek/ChatGPT extraction adapters
    # (lazily imported in __init__), exposed as the optional ``openai`` extra so
    # callers that don't use those adapters stay lean. The test suite
    # (``test_deepseek_extraction_retry.py``) imports openai at module level to
    # patch the client and assert the retry/classification loop, so [dev] must
    # pull it in — otherwise CI's fresh install fails collection with exit 2.
    "openai>=1.40,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ml_clients"]

# Optional-dep and workspace-dep imports lack stubs — suppress globally per module
[[tool.mypy.overrides]]
module = [
    "messaging.*",
    "gliner.*",
    "anthropic.*",
    "openai.*",
    "google.*",
    "google.genai.*",
    "observability.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra",
]
