[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observability"
version = "2025.6.0"
description = "Structured logging, Prometheus metrics, and OpenTelemetry tracing"
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog>=24.1",
    "prometheus-client>=0.21",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
