[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observability"
version = "2025.6.0"
description = "Structured logging, Prometheus metrics, and OpenTelemetry tracing"
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog==25.5.0",
    "prometheus-client==0.24.1",
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "starlette==0.37.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.5",
    "mypy==1.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
