[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observability"
version = "2025.6.0"
description = "Structured logging, Prometheus metrics, and OpenTelemetry tracing"
requires-python = ">=3.11,<3.13"
dependencies = [
    "structlog>=25.0,<26",
    "prometheus-client>=0.24,<1",
    "opentelemetry-api>=1.40,<2",
    "opentelemetry-sdk>=1.40,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40,<2",
    "opentelemetry-instrumentation-fastapi>=0.61b0,<1",
    "starlette>=0.37,<1",
    "sentry-sdk[fastapi]>=2.18.0,<3",
    "pydantic-settings>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observability"]
