[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompts"
version = "2025.6.0"
description = "Centralised, versioned prompt templates for LLM interactions"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompts"]
