[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storage"
version = "2025.6.0"
description = "S3-compatible object storage abstraction (MinIO, AWS S3)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3==1.34",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0",
    "pytest-asyncio==0.23",
    "ruff==0.4",
    "mypy==1.10",
    "boto3-stubs[s3]==1.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/storage"]
