[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storage"
version = "2025.6.0"
description = "S3-compatible object storage abstraction (MinIO, AWS S3)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.34,<2",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=25.0,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "boto3-stubs[s3]>=1.34,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/storage"]
