[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alert"
version = "2025.6.0"
description = "Alert fan-out service: watchlist-driven signal delivery via WebSocket"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "messaging",
    "observability",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0",
    "pytest-asyncio>=0.23.4",
    "pytest-httpserver>=1.0",
    "ruff==0.4",
    "mypy==1.10",
    "fakeredis[aioredis]>=2.23",
    "testcontainers[postgres]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alert"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra (DB, Kafka, Valkey)",
    "contract: contract tests against S1 API",
    "e2e: end-to-end tests against a real alert_db database",
]
