[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alert"
version = "2025.6.0"
description = "Alert fan-out service: watchlist-driven signal delivery via WebSocket"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "messaging",
    "observability",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "PyJWT[crypto]>=2.8,<3",
    "cryptography>=42.0,<43",
    "aiosmtplib>=3.0,<4",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpserver>=1.0,<2",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "fakeredis[aioredis]>=2.23,<3",
    "testcontainers[postgres]>=4.8,<5",
    "aiosqlite>=0.19,<1",  # outbox requeue/repository tests use in-memory aiosqlite
]

[tool.hatch.build.targets.wheel]
packages = ["src/alert"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra (DB, Kafka, Valkey)",
    "contract: contract tests against S1 API",
    "e2e: end-to-end tests against a real alert_db database",
]
