[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-gateway"
version = "2025.6.0"
description = "BFF API gateway — auth, rate limiting, caching, request composition"
requires-python = ">=3.11,<3.13"
dependencies = [
    "messaging",
    "observability",
    # WHY >=0.112: FastAPI 0.111 ships starlette<0.38.0 which contains a known
    # BaseHTTPMiddleware bug where send() raising during cancellation leaves the
    # response in an undefined state (RuntimeError: No response returned). Starlette
    # fixed this in 0.38.0. FastAPI 0.112+ allows starlette>=0.38.0. (PLAN-0099 W4)
    "fastapi>=0.112,<0.116",
    "starlette>=0.38.0,<0.42",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "httpx==0.27",
    "sse-starlette==2.0",
    "pyjwt[crypto]==2.8",
    "cryptography>=42.0,<43",
    # PRD-0089 F2: in-process TTL cache for ticker→instrument_id resolution
    # (see api_gateway/resolution.py). Pure-Python, no native deps.
    "cachetools==5.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "respx>=0.21,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra (Docker/Postgres)",
    "e2e: end-to-end tests requiring full infra",
]
