[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-ingestion"
version = "2025.6.0"
description = "RSS/API polling for news, domain allowlists, rate limiting, relay fallback, raw article storage"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "aiokafka>=0.10",
    "fastavro>=1.9",
    "minio>=7.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0",
    "pytest-asyncio==0.23",
    "pytest-httpx==0.30",
    "ruff==0.4",
    "mypy==1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/content_ingestion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra (DB, Kafka, MinIO)",
]
