[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-ingestion"
version = "2025.6.0"
description = "RSS/API polling for news, domain allowlists, rate limiting, relay fallback, raw article storage"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "messaging",
    "storage",
    "observability",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/content_ingestion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra (DB, Kafka, MinIO)",
    "e2e: end-to-end scenario tests (in-process ASGI, real DB)",
]
