[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-store"
version = "2025.6.0"
description = "Dedup, canonical ID assignment, metadata extraction, clean text storage"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "contracts",
    "messaging",
    "storage",
    "observability",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42.0",
    "structlog==25.5.0",
    "datasketch==1.6",
    "readability-lxml>=0.8.1",
    "bleach==6.2",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/content_store"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (no external dependencies)",
    "integration: integration tests (require DB, Kafka, MinIO)",
    "contract: contract tests (Avro schema compatibility)",
    "e2e: end-to-end tests",
]
