[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-graph"
version = "2025.6.0"
description = "Entity/relation ingestion, company→event→news graph, traversal queries"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "contracts",
    "observability",
    "prompts",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "PyJWT[crypto]>=2.8,<3",
    "cryptography>=42.0,<43",
    "structlog>=24.0",
    "messaging",
    "apscheduler[asyncio]>=3.10,<4",
    "prometheus-client>=0.20",
    "ml-clients",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "testcontainers[postgres]>=4.8,<5",
    "prometheus-client>=0.20,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_graph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that require running infrastructure",
    "contract: Avro/schema contract tests",
    "e2e: full end-to-end tests",
]
