[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-data"
version = "2025.6.0"
description = "Market data storage, query, and streaming service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0",
    "pytest-asyncio==0.23",
    "pytest-httpx==0.30",
    "ruff==0.4",
    "mypy==1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_data"]
