[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-data"
version = "2025.6.0"
description = "Market data storage, query, and streaming service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "observability",
    "uuid6==2024.1.12",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "PyJWT[crypto]>=2.8,<3",
    "cryptography>=42.0,<43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "respx>=0.21,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "testcontainers[postgres,kafka,minio]>=4.8,<5",
    "valkey>=6,<7",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "unit: fast isolated unit tests",
    "contract: schema and API contract validation tests (no containers needed)",
    "integration: tests requiring external containers (DB, Kafka, MinIO, Valkey)",
    "e2e: end-to-end tests requiring the full docker-compose stack",
    "live: tests that make real HTTP calls to external APIs (requires network + api key)",
    "slow: long-running tests excluded from CI fast path",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_data"]
