[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-ingestion"
version = "2025.6.0"
description = "Market data ingestion and scheduling service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "yfinance>=0.2.36,<0.3",
    "PyJWT[crypto]>=2.8,<3",
    "cryptography>=42.0,<43",
    "common",
    "contracts",
    "messaging",
    "observability",
    "storage",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    # test_insider_universe_loader (BP-704) drives the loader SQL against an
    # in-memory aiosqlite DB; declare it so CI's fresh `pip install [dev]` has it.
    "aiosqlite>=0.19,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_ingestion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external infra (Docker/Postgres/MinIO)",
    "contract: Avro schema contract tests",
    "e2e: end-to-end tests requiring full infra",
    "live: tests that make real HTTP calls to external APIs (requires network + api key)",
    "requires_infra: tests that require live Kafka/Postgres/MinIO containers (CI-only by default)",
]
