[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlp-pipeline"
version = "2025.6.0"
description = "NLP enrichment pipeline: sectioning, NER, entity resolution, embeddings, deep extraction"
requires-python = ">=3.11,<3.13"
dependencies = [
    "common",
    "contracts",
    "messaging",
    "observability",
    "ml-clients[openai]",
    "prompts",
    "storage",
    "fastapi==0.111",
    "uvicorn[standard]==0.29",
    "pydantic==2.5",
    "pydantic-settings==2.1",
    "sqlalchemy[asyncio]==2.0",
    "asyncpg==0.29",
    "alembic==1.13",
    "httpx==0.27",
    "PyJWT[crypto]>=2.8,<3",
    "cryptography>=42.0,<43",
    "structlog>=24.0",
    "redis>=5.0",
    "pgvector>=0.3",
    "prometheus-client>=0.20",
    "confluent-kafka>=2.3",
    "fastavro>=1.9",
    # PLAN-0111 C-2: the learned routing classifier ships as a joblib artifact
    # (a CalibratedClassifierCV wrapping LightGBM trees). The runtime needs
    # scikit-learn (to unpickle + predict_proba), lightgbm (the base estimator),
    # joblib (load), and numpy (feature matrix). Versions pinned to the ones the
    # exporter (scripts/eval/routing_classifier_export.py) trained with so the
    # pickle deserialises without a sklearn-version warning at load.
    "scikit-learn>=1.5,<2",
    "lightgbm>=4.5,<5",
    "joblib>=1.4,<2",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "fakeredis[aioredis]>=2.23,<3",
    "testcontainers[postgres]>=4.8,<5",
    "hypothesis>=6.100,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_pipeline"]
# PLAN-0111 C-2: the learned-router artifact (joblib model + meta JSON) lives
# inside the package at application/blocks/models/. Hatchling only bundles .py
# files by default, so explicitly include the data files in the built wheel.
# (The Docker image COPYs src/ directly, so this only affects pip-installed
# wheels — but we keep it correct for both paths.)
artifacts = [
    "src/nlp_pipeline/application/blocks/models/*.joblib",
    "src/nlp_pipeline/application/blocks/models/*.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that require running infrastructure",
    "contract: Avro/schema contract tests",
    "e2e: full end-to-end tests",
]
